--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
 
   <!-- this is where my code is-->
   <div id="grid">
-    <div id="left-column" class="scroll">  
-
-      <!-- my favorite pokemon -->
-      <!-- <img src="https://archives.bulbagarden.net/media/upload/2/24/Spr_2c_054.png" alt="Psyduck" /> -->
-
+    <div id="left-column" class="scroll"> 
       <!-- about me-->
       <h1>[Jinho Yoo]</h1>  
       <p class="desc">Its 2AM in the morning right now...</p>
       <ul>
-        <li>My favorite food is Sushi</li>
+        <li>My favorite food is Sui</li>
         <li>My favorite song is Karri- Lemonade</li>
         <li>My favorite website is <a href="https://olafureliasson.net/uncertain">Olafur Eliasson</a></li>
       </ul>
