--- a/ascii/exterior-jinhoyoo.html
+++ b/ascii/exterior-jinhoyoo.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>exterior-jinhoyoo.html</title>
-  <meta charset="utf-8">
+<title>Ascii Town: Jinho Yoo (I)</title>
+<meta charset="utf-8">
 </head>
 <body>
-  <pre>
+  <a href="../index.html">Home</a>
+<a href="interior-jinhoyoo.html">
+<pre>
               ____     _____________
               |==|____/_____________\___
               |==/UUUU|.---.---.---.|UUU\
@@ -17,14 +19,15 @@
              |== ===  = =  ==   ==  == =  ==|-
              |= _______________ =  _______ =|=
              |=|:::|:::|:::|:::| =|.-----.|=|-
-             |=|^^^|^^^|^^^|^^^|12|||_|_|||=|=
+             |=|^^^|^^^|^^^|^^^|  |||_|_|||=|=
              |=|---+---+---+---| =|||_|_|||=|=
              |=|   |   |   |   |= ||     ||=|-
              |=|___|___|___|___| =|| == O||=|=
              |=""""""""""""""""" "||     ||=|-
-             |= =.jinhoyoo's house||_____||=|-
-             """"|__________|"""""/_______\" ""
+             |= = = = = = = = = = ||_____||=|-
+             """"|__________|"""""/_______\" "
                                   """""""""
-  </pre>
+</pre>
+</a>
 </body>
 </html>
