--- a/ascii/interior-jinhoyoo.html
+++ b/ascii/interior-jinhoyoo.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>interior-jinhoyoo.html</title>
-  <meta charset="utf-8">
+<title>Ascii Town: Jinho Yoo (O)</title>
+<meta charset="utf-8" >
 </head>
 <body>
-  <pre>
+<a href="exterior-jinhoyoo.html">
+<pre>
  
                 _________________
                /                /|
@@ -38,9 +39,7 @@
  |                                    |          /___\/
  |2AM...StillCoding...                |           oo
  |____________________________________|
-
-
-
-  </pre>
+</pre>
+</a>
 </body>
 </html>
