--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
       <h1>[Jinho Yoo]</h1>  
       <p class="desc">Its 2AM in the morning right now...</p>
       <ul>
-        <li>My favorite food is Sui</li>
+        <li>My favorite food is Sushi</li>
         <li>My favorite song is Karri- Lemonade</li>
         <li>My favorite website is <a href="https://olafureliasson.net/uncertain">Olafur Eliasson</a></li>
       </ul>
 
     </div>
   </div>
+
+  <h3>Exercises</h3>
+  <ul>
+        <li><a href="ascii/exterior-jinhoyoo.html">ASCII TOWN</a></li>
 </body>
 </html>
