--- a/coding_from_life/coding_from_life.html
+++ b/coding_from_life/coding_from_life.html
@@ -2,10 +2,10 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>진호 스타일 캣 마리오</title>
+  <title>Cat Mario</title>
   <style>
     body {
-      background: white;
+      background: lightgray;
       margin: 0;
       display: flex;
       justify-content: center;
