--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
   <h3>Exercises</h3>
   <ul>
         <li><a href="ascii/exterior-jinhoyoo.html">ASCII TOWN</a></li>
+        <li><a href="coding_from_life/coding_from_life.html">CODING FROM LIFE</a></li>
 </body>
 </html>
