--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
 <head>
   <title>Jinho Yoo's [UI Design Programming 1] Page</title>
   <meta charset="utf-8" />
+
+  <!-- Google Fonts 불러오기 -->
+  <link href="https://fonts.googleapis.com/css2?family=Silkscreen&family=Ballet&family=Press+Start+2P&family=Stick+No+Bills&display=swap" rel="stylesheet">
+
   <style>
     body {
       font-family: Helvetica, sans-serif;
-      margin: 10px;
-      line-height: 1.2
+      margin: 60px;
+      line-height: 1.4;
     }
 
     a.button {
       display: inline-block;
-/*      padding: 8px 16px;*/
-      margin: 5px 0;
+      margin: 4px 0;
       background-color: #f0f0f0;
       color: #333;
       text-decoration: none;
-      border: 1px solid #ccc;
+      border: 3px solid #ccc;
       border-radius: 4px;
       transition: background-color 0.3s, color 0.3s;
     }
@@ -33,19 +36,35 @@
     }
 
     #clock {
-      font-size: 300px;
+      font-size: 240px;
       font-weight: bold;
-      margin: 5px 0;
+      margin: 10px 0;
+      letter-spacing: 6px;
     }
+
+    /* 개별 숫자에 적용될 서체 클래스 */
+    .f1 { font-family: 'Silkscreen', sans-serif; }
+    .f2 { font-family: 'Ballet', serif; }
+    .f3 { font-family: 'Baskerville', sans-serif; }
+    .f4 { font-family: 'Press Start 2P', cursive; }
+    .f5 { font-family: 'Helvetica', cursive; }
+    .f6 { font-family: 'Stick No Bills', sans-serif; }
   </style>
 </head>
 
 <body>
 
   <div id="grid">
-    <div id="left-column" class="scroll"> 
+    <div id="left-column" class="scroll">
       <h1>Archiving...</h1>
-      <div id="clock"></div> <!-- 현재 시간 표시될 자리 -->
+
+      <!-- 시계 -->
+      <div id="clock">
+        <span id="h1" class="f1">0</span><span id="h2" class="f2">0</span> :
+        <span id="m1" class="f3">0</span><span id="m2" class="f4">0</span> :
+        <span id="s1" class="f5">0</span><span id="s2" class="f6">0</span>
+      </div>
+
       <p class="desc">Hi, welcome to Jinho Yoo's webpage.</p>
       <ul>
         <li>Graphic / Photo +</li>
@@ -59,21 +78,27 @@
   <ul>
     <li><a class="button" href="ascii/exterior-jinhoyoo.html">Ascii Town</a></li>
     <li><a class="button" href="coding_from_life/coding_from_life.html">Coding from life</a></li>
-    <li><a class="button" href="https://www.figma.com/design/k4UPN5Kb1LD40NsFPOCsM3/Jinho-Yoo_Apple-Music?node-id=0-1&t=9FxWlZ5s655QAeHZ-1">TuneFrame</a></li>
+    <li><a class="button" href="https://www.figma.com/design/k4UPN5Kb1LD40NsFPOCsM3/Jinho-Yoo_Apple-Music?node-id=0-1&t=9FxWlZ5s655QAeHZ-1">P1: TuneFrame</a></li>
   </ul>
 
-  <!-- 스크립트는 body 맨 아래에 -->
+  <!-- Clock Script -->
   <script>
     function updateClock() {
       const now = new Date();
-      const hours = String(now.getHours()).padStart(2, '0');
-      const minutes = String(now.getMinutes()).padStart(2, '0');
-      const seconds = String(now.getSeconds()).padStart(2, '0');
-      document.getElementById('clock').textContent = `${hours}:${minutes}:${seconds}`;
+      const h = now.getHours().toString().padStart(2, '0');
+      const m = now.getMinutes().toString().padStart(2, '0');
+      const s = now.getSeconds().toString().padStart(2, '0');
+
+      document.getElementById('h1').textContent = h[0];
+      document.getElementById('h2').textContent = h[1];
+      document.getElementById('m1').textContent = m[0];
+      document.getElementById('m2').textContent = m[1];
+      document.getElementById('s1').textContent = s[0];
+      document.getElementById('s2').textContent = s[1];
     }
 
     setInterval(updateClock, 1000);
-    updateClock(); // 첫 실행
+    updateClock();
   </script>
 
 </body>
